src/test/deca/context/invalid/created/rule3.28/returntype.deca
// Résultat erreur:
//    Retour d'une valeur de type incompatible (règle 3.28)
//
// Description:
//    Tests de programme incorrect contextuellement (type de retour incompatible)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode() {
        return "texte"; 
    }
}
